--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.ccbury.joblisting">
 
     <application
@@ -9,16 +10,17 @@
         android:roundIcon="@drawable/laptop"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SplashScreen">
+        <activity android:name="com.ccbury.joblisting.SplashScreen"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".WorkFromHomeActivity"/>
         <activity android:name=".MainActivity"/>
+        <activity android:name=".WorkFromHomeActivity"/>
+        <activity android:name=".GradJobActivity"/>
     </application>
 
 </manifest>
