Added map to description age and began working on layout for this final page. CB

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,8 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+            resValue "string", "google_maps_key",
+                    (project.findProperty("GOOGLE_MAPS_API_KEY") ?: "")
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
