--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,13 @@
         android:roundIcon="@drawable/laptop"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCPr3ABgMwCkKds0qgsu-8Hq4b32_MrpXI" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
         <activity android:name="com.ccbury.joblisting.SplashScreen"
             android:label="@string/app_name">
             <intent-filter>
