--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,8 @@
 org.gradle.jvmargs=-Xmx2048m
 android.useAndroidX=true
 android.enableJetifier=true
+GOOGLE_MAPS_API_KEY=AIzaSyCPr3ABgMwCkKds0qgsu-8Hq4b32_MrpXI
+
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
